Fix align of popover

--- a/src/scss/03-widgets/_popover.scss
+++ b/src/scss/03-widgets/_popover.scss
@@ -5,6 +5,10 @@
 
 ///
 [data-popover] {
+	[data-icon] {
+		vertical-align: initial;
+	}
+
 	& > .popover {
 		&-top {
 			border: var(--border-size-none);
